2010.02.09: David Nichols
	 * streamlined user variant execution, fixed argument processing for
	   user variants
	 * add class name to overload parse and runtime errors

2010.02.08: David Nichols
	 * fixed illegal private method call detection at parse time,
	   including illegal private copy method calls
	 * fixed illegal runtime private copy method call detection
	 * implemented support for private constructors and catching invalid
	   instantiations with private constructors at parse and run time
	 * fixed a bug in the new design related to unified user/builtin
	   function calling passing references to object members

2010.02.05: David Nichols
	 * API updates to export type information for basic value types to be
	   used in modules
	 * more API updates so type and variant information is accessible in
	   modules
	 * implemented C++ iterators for QoreClass methods

2010.02.04: David Nichols
	 * fixed a bug where File::open*() would reset the encoding given in
	   the constructor
	 * overloaded methods in the File class for builtin overloaded method
	   testing

2010.02.03: David Nichols
	 * massive internal updates for function and method overloading

2010.01.26: David Nichols
	 * massive internal updates to streamline function, method, and 
	   call implementations
	 * fixed a bug processing arguments to in-object method calls in the
           background operator
	 * fixed a bug processing arguments to static method calls in the
           background operator
	 * implemented AbstractFunctionSignature C++ class for consistent
	   handling of type information for all function types
	 * added source location information to user parameter lists for
	   correct error reporting in parse exceptions

2010.01.23: David Nichols
	 * fixed line number reporting for type errors in initializer
	   expressions in public and private class member declarations

2010.01.22: David Nichols
	 * implement type enforcing at parse time for builtin constructors
