@@ -2,6 +2,7 @@
 	 * streamlined user variant execution, fixed argument processing for
 	   user variants
 	 * add class name to overload parse and runtime errors
+	 * added type information to math functions
 
 2010.02.08: David Nichols
 	 * fixed illegal private method call detection at parse time,
